--- a/website/css/style.css
+++ b/website/css/style.css
@@ -1,20 +1,25 @@
 * { margin: 0; padding: 0; }
+html, body { height:100%; margin: 0; padding: 0; }
 body { background: #ccc url('/img/main-bg.png') repeat; font-family: Arial; }
-#header { background: #333 url('/img/title-bg.png') repeat; color: #fff; border-bottom: 1px solid #111; }
+#wrapper { min-height:100%; position:relative; }
+#header { background: #333 url('/img/title-bg.png') repeat; color: #fff; border-bottom: 1px solid #000; }
 #header a { color: #fff; text-decoration: none; }
 #header a:hover { text-decoration: underline; }
 #header a:active img { margin-top: 2px; margin-left: 2px; margin-bottom: -2px; }
-#header header { text-align: center; padding-top: 30px; padding-bottom:30px; }
+#header header { text-align: center; padding: 30px 100px 30px 100px; background: url('/img/beta.png') no-repeat; }
 #header nav ul { list-style-type: none; margin: 0 auto 0 auto; width: 505px; }
 #header nav li { float: left; padding: 2px 7px 2px 7px; margin: 0 13px 0 13px; font-size: 18px; margin-bottom: 20px; }
 #header nav li:hover { border-bottom: 1px solid #fff; }
 #header nav li.current { border-bottom: 2px solid #fff; }
 #header nav li a { color: #fff; }
 #header nav li a:hover { text-decoration: none; }
-section { width: 650px; margin: 40px auto 30px auto; text-align: justify; }
+section { width: 650px; margin: 30px auto 0 auto; padding: 10px; text-align: justify; padding-bottom:86px; }
 section a { color: #000; text-decoration: none; }
 section a:hover { text-decoration: underline; }
-footer { font-size: 0.8em; text-align: center; margin-top: 50px; margin-bottom: 20px; }
+section h1, section h2 { font-size: 24px; color: #444; font-weight: bold; text-align: center; margin-bottom: 20px; }
+section h2 { margin-top: 50px; }
+footer { font-size: 0.8em; text-align: center; position: absolute; bottom: 0; height: 16px; padding-top: 40px; width: 100%; /*background: url('/img/rache.png') no-repeat bottom right;*/ margin-bottom: 20px; }
+footer p { padding-top: 80px; overflow: hidden; }
 footer a { color: #000; text-decoration: none; }
 footer a:hover { text-decoration: underline; }
 .clear { clear: both; }
@@ -25,3 +30,7 @@ footer a:hover { text-decoration: underline; }
 .download { display: block; width: 192px; height: 29px; padding: 17px 20px 17px 20px; font-size: 24px; background-image: url('/img/download_off.png'); color: #fff; margin: auto; }
 .download:hover { background-image: url('/img/download_on.png'); text-decoration: none !important; color: #fff; }
 .console { background-color: #333; border: 1px solid #000; color: #fff; padding: 7px 12px 7px 12px; border-radius: 10px; margin-top: 10px; box-shadow: 0 0 7px #222; }
+.details { text-align: right; font-size: 0.8em; margin-top: 6px; }
+.details a { color: #666; font-style: italic; }
+.details a:hover { color: #666; font-style: normal; text-decoration: none; }
+acronym { border-bottom: 1px dotted #333; }
